--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/dacup72/email-survey-manager#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
-    "mongodb": "^3.1.0",
     "mongoose": "^5.1.7",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
